--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,10 @@ jobs:
     steps:
       - name: Checkout no Repo
         uses: actions/checkout@v4
+
+      - name: Directory
+        run: |
+          echo $PWD
+        shell: bash
+
       
