--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,15 +9,40 @@ jobs:
   push:
     runs-on: ubuntu-latest
     steps:
+      # - name: Checkout no Repo
+      #   uses: actions/checkout@v4
+      #   with:
+      #     repository: '${{ github.repository }}'
+      #     ref: 'main'
+      #     set-safe-directory: '/home/runner/work/LINUXtips-Giropops-Senhas/LINUXtips-Giropops-Senhas'
+    hadolint:
       - name: Checkout no Repo
         uses: actions/checkout@v4
         with:
           repository: '${{ github.repository }}'
           ref: 'main'
           set-safe-directory: '/home/runner/work/LINUXtips-Giropops-Senhas/LINUXtips-Giropops-Senhas'
-      
       - uses: actions/checkout@v3
       - uses: hadolint/hadolint-action@v3.1.0
         with:
-          dockerfile: versao-01/Dockerfile
-
+          dockerfile: Dockerfile
+          output-file: hadolint-versao-01
+    update-commit:
+      - name: Update Pull Request
+        uses: actions/github-script@v6
+        if: github.event_name == 'pull_request'
+        with:
+          script: |
+            const output = `
+            #### Hadolint: \`${{ steps.hadolint.outcome }}\`
+            \`\`\`
+            ${process.env.HADOLINT_RESULTS}
+            \`\`\`
+            `;
+    
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
