--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,28 @@ jobs:
       - uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: versao-01/Dockerfile
+          output-file: versao-01/Hadolint-Giropops-Output
+  
+  update-pr:
+    runs-on: ubuntu-latest
+    needs: [push]
+    steps:
+      - name: Update Pull Request
+        uses: actions/github-script@v6
+        if: github.event_name == 'pull_request'
+        with:
+          script: |
+            const output = `
+            #### Hadolint: \`${{ steps.hadolint.outcome }}\`
+            \`\`\`
+            ${process.env.HADOLINT_RESULTS}
+            \`\`\`
+            `;
+
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
   
